auth & layout configued

--- a/templates/register/register.html.twig
+++ b/templates/register/register.html.twig
@@ -20,9 +20,9 @@
             {% endfor %}
             <div class="mb-3">
               <label class="form-label">You are</label>
-              <select id="roleSelect" name="user_type" class="form-select">
-                <option value="patient" selected>Patient</option>
-                <option value="medecin">Medecin</option>
+              <select id="roleSelect" name="role" class="form-select">
+                <option value="PATIENT" selected>Patient</option>
+                <option value="MEDECIN">Medecin</option>
               </select>
             </div>
 
