--- a/templates/dashboard/patient/_sidebar.html.twig
+++ b/templates/dashboard/patient/_sidebar.html.twig
@@ -7,12 +7,12 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white rounded-3 px-3 py-2" href="#">
+            <a class="nav-link text-white rounded-3 px-3 py-2" href="{{ path('patient_rendezvous') }}">
                 <i class="bi bi-calendar-check-fill"></i> Mes rendez-vous
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-white rounded-3 px-3 py-2" href="#">
+            <a class="nav-link text-white rounded-3 px-3 py-2" href="{{ path('patient_profil') }}">
                 <i class="bi bi-person-fill"></i> Mon profil
             </a>
         </li>
